--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>ROBOTCHI</title>
     <script src="Links/p5/p5.min.js"></script>
     <script src="Links/p5/p5setup.js"></script>
+    <script src="Links/gsap.min.js"></script>
     <!-- "module" sagt dem browser, dass "import"/ES6 (neuster JS-Code) genutzt wird-->
     <script type="module" src="00_tamagotchi_de-Vries.js"></script>
 
